95% bus